--- a/src/lane_keep_assist/CMakeLists.txt
+++ b/src/lane_keep_assist/CMakeLists.txt
@@ -42,6 +42,12 @@ find_package(catkin REQUIRED)
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
+find_package(catkin REQUIRED COMPONENTS
+    rospy
+    std_msgs
+    message_generation
+)
+
 ## Generate messages in the 'msg' folder
 # add_message_files(
 #   FILES
@@ -64,10 +70,10 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   std_msgs  # Or other packages containing msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
