--- a/src/mapping_navigation/CMakeLists.txt
+++ b/src/mapping_navigation/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(catkin REQUIRED COMPONENTS
  add_message_files(
    FILES
    PathData.msg
+   Steer.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -71,7 +72,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
    DEPENDENCIES
-   std_msgs  # Or other packages containing msgs
+   std_msgs
  )
 
 ################################################
