some bug causing issues

--- a/src/lane_keep_assist/CMakeLists.txt
+++ b/src/lane_keep_assist/CMakeLists.txt
@@ -49,11 +49,10 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+ add_message_files(
+   FILES
+   LaneStatus.msg
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
