--- a/src/lane_keep_assist/CMakeLists.txt
+++ b/src/lane_keep_assist/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(catkin REQUIRED COMPONENTS
  add_message_files(
    FILES
    LaneStatus.msg
+   Lane.msg
  )
 
 ## Generate services in the 'srv' folder
