--- a/src/lane_keep_assist/package.xml
+++ b/src/lane_keep_assist/package.xml
@@ -52,6 +52,10 @@
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
 
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>cv2</exec_depend>
+  <exec_depend>numpy</exec_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
